2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Mark check-html and check-TESTS as recursive for BSD make.
	* lib/am/check.am [PARALLEL_TESTS] (.MAKE): Add check-TESTS
	and check-html prerequisites.

	Match XFAIL_TESTS correctly with Solaris make.
	* lib/am/check.am [PARALLEL_TESTS]: VPATH rewriting may have
	changed test names, so srcdir needs to be taken into account
	explicitly when checking against the list of tests expected
	to fail.  Fixes spurious FAILures from XFAIL_TESTS.

	Use append mode to capture parallel test output.
	* tests/lisp8.test: Use append mode for output from `make -j',
	to avoid dropped lines.
	* tests/parallel-tests3.test: Likewise.

	parallel-tests: Fix summary output.
	* lib/am/check.am (am__text_box): Fix unportable sed script,
	replacing `\n' in the right hand side of an `s' command with
	a literal newline.  Kudos to Bruno Haible for the newline idea.
	* tests/parallel-tests.test: Update test to expose this.

2009-03-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Overhaul of tests/README.
	* tests/README: General overhaul.  Mention parallel test suite
	execution, the test-suite.log file; document `Exit' vs. `exit',
	`defs' vs. `defs-p', the naming of `parallel-tests' tests.
	* README: Simplify, point to tests/README.

	Documentation for the parallel-tests driver.
	* doc/automake.texi (Tests, Options): Document the `parallel-tests'
	option, including new features of the test driver.
	* NEWS: Update.

	New tests for `parallel-tests'.
	* tests/parallel-tests.test: New file, to expose a bunch of
	features of `parallel-tests': VERBOSE, clean, TEST_SUITE_LOG,
	test dependencies, DISABLE_HARD_ERRORS.
	* tests/parallel-tests2.test: New file, test check-html.
	* tests/parallel-tests3.test: New file, test concurrency.
	* tests/parallel-tests4.test: New file, test suffix rules.
	* tests/parallel-tests5.test: New file, demonstrate compile/test
	concurrency.
	* tests/defs.in: Add a `required' check for rst2html.