@@ -1,5 +1,14 @@
 2009-03-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix parallel-tests with empty $(TESTS) for BSD make.
+	* lib/am/check.am [PARALLEL_TESTS] ($(TEST_SUITE_LOG)): Ignore
+	empty line stemming from empty $(TEST_LOGS), to avoid counting
+	zero tests as one.
+	(check-TESTS): If `$(TESTS)' is empty, override TEST_LOGS to be
+	empty, rather than `.log', for BSD make.
+	* tests/parallel-tests6.test: New test.
+	* tests/Makefile.am: Update.
+
 	Mark check-html and check-TESTS as recursive for BSD make.
 	* lib/am/check.am [PARALLEL_TESTS] (.MAKE): Add check-TESTS
 	and check-html prerequisites.
